<resources>
    <string name="app_name">APY 1000</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">APY 1000</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="header_welcome">Bonjour Pierre</string>
    <string name="menu_accueil">Accueil</string>
    <string name="menu_commander">Commander</string>
    <string name="menu_actualite">Actualités</string>
    <string name="menu_restaurant">Restaurants</string>
    <string name="menu_parametre">Paramètres</string>
    <string name="menu_deconnexion">Déconnexion</string>
    <string name="menu_mentions_legales">Mentions légales</string>
    <string name="menu_aide">Aide en ligne</string>
    <string name="string_action_cart">Panier</string>
    <string name="string_action_user">Mon compte</string>
    <string name="btn_commander">Commander</string>
    <string name="tv_votre_resaurant">Votre Restaurant :</string>
    <string name="exemple_text">---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</string>
    <string name="txt_choix">Choisissez votre base !</string>
</resources>
