<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ViewFlipper
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_commander"
            android:layout_below="@id/slider"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_commander"/>

        <TextView
            android:id="@+id/tv_votre_restaurant"
            android:layout_below="@id/btn_commander"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:text="@string/tv_votre_resaurant"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_votre_restaurant"
            android:layout_marginTop="20dp"
            android:text="@string/exemple_text"/>
    </RelativeLayout>
</ScrollView>
